elasticsearch-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f elasticsearch.yml
    kompose.version: 1.21.0 (992df58d8)
  creationTimestamp: null
  labels:
    io.kompose.service: elasticsearch
  name: elasticsearch
  namespace: k8s-containerized-services
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: elasticsearch
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: /snap/kompose/19/kompose-linux-amd64 convert -f elasticsearch.yml
        kompose.version: 1.21.0 (992df58d8)
      creationTimestamp: null
      labels:
        io.kompose.service: elasticsearch
    spec:
      containers:
      - env:
        - name: ES_JAVA_OPTS
          value: -Xms512m -Xmx512m
        - name: bootstrap.memory_lock
          value: "true"
        - name: cluster.name
          value: es-docker-cluster
        - name: discovery.type
          value: single-node
        - name: node.name
          value: elasticsearch
        - name: xpack.security.enabled
          value: "false"
        image: docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        #imagePullPolicy: ""
        name: service-elasticsearch
        ports:
        - containerPort: 9200
        - containerPort: 9300
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
